<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="150dp">

    <TextView
        android:id="@+id/accelTitle"
        android:text="@string/Accelerometer"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/accelX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/X"
        app:layout_constraintTop_toBottomOf="@id/accelTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/accelY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Y"
        app:layout_constraintTop_toBottomOf="@id/accelX"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/accelZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Z"
        app:layout_constraintTop_toBottomOf="@id/accelY"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/gyroTitle"
        android:text="@string/Gyroscope"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/accelZ"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/gyroX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gyroX"
        app:layout_constraintTop_toBottomOf="@id/gyroTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/gyroY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gyroY"
        app:layout_constraintTop_toBottomOf="@id/gyroX"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/gyroZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gyroZ"
        app:layout_constraintTop_toBottomOf="@id/gyroY"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/orientationTitle"
        android:text="@string/Orientation"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/gyroZ"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/orientationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OrientationText"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/orientationTitle"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>